--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "keywords": "hickey_bei",
   "devDependencies": {
     "axios": "^0.18.0",
+    "baidu-aip-sdk": "^2.2.0",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "fluent-ffmpeg": "^2.1.2",
     "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "ws": "^4.0.0"
