--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "baidu-aip-sdk": "^2.2.0",
     "body-parser": "^1.18.2",
     "cookie-parser": "^1.4.3",
+    "crypto": "^1.0.1",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "fluent-ffmpeg": "^2.1.2",
